--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,7 +44,7 @@ jobs:
           npm ci
       # Build client
       - name: Build client
-        run: sh /cli/cli.sh build
+        run: chmod +x /cli/cli.sh && sh /cli/cli.sh build
       # Build server
       - name: Build server
         run: npm run prod:build:server
