--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,7 +47,10 @@ jobs:
         run: ls -l && cd cli && ls -l
       # Build client
       - name: Build client
-        run: ls -l && chmod +x cli/cli.sh && sh /cli/cli.sh build
+        run: chmod +x cli/cli.sh
+      # Build client
+      - name: Build client
+        run: ls -l && sh /cli/cli.sh build
       # Build server
       - name: Build server
         run: npm run prod:build:server
