--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,9 +42,12 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
+      # Add exec
+      - name: Build client
+        run: chmod +x cli/cli.sh
       # Build client
       - name: Build client
-        run: bash ./cli/build.sh
+        run: cli/cli.sh build
       # Build server
       - name: Build server
         run: npm run prod:build:server
