--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "prod:build": "tsc --pretty",
-    "prod:heroku:server": "pm2 link $(cat ../secrets/.pm2.secret) && pm2-runtime start ecosystem.config.js --env production",
+    "prod:heroku:server": "pm2-runtime start ecosystem.config.js --env production",
     "prod:heroku:server_opt": "./node_modules/.bin/ts-node server.ts --optimize_for_size --max_old_space_size=460 --gc_interval=100",
     "prod": " ../node_modules/.bin/ts-node server.ts ",
     "dev": "./node_modules/.bin/nodemon --config \"./nodemon.json\"",
