--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
     "test:unit": "cross-env NODE_ENV=test jest",
     "test:unit:watch": "cross-env NODE_ENV=test jest -o --watch --detectOpenHandles",
     "test:unit:coverage": "cross-env NODE_ENV=test --coverage --detectOpenHandles",
-    "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod 5001 test:coverage"
+    "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod 5001 test:coverage",
+    "prod:trans": "node build_server/server/server.js",
+    "build": "./node_modules/.bin/tsc --pretty --emitDecoratorMetadata --esModuleInterop --experimentalDecorators  --forceConsistentCasingInFileNames --isolatedModules --listFiles --listEmittedFiles --noErrorTruncation --outDir ./build_server --removeComments --skipLibCheck --downlevelIteration server.ts > server_compilation.txt"
   },
   "jest": {
     "testTimeout": 10000,
