--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "dev:server": "cd server && npm run dev",
     "dev:client": "npm run CRA:start",
     "-----PRODUCTION----": "---------------------------",
-    "prod:server": "cd server && npm run prod",
+    "prod:server:js": "cd server && npm run prod",
+    "prod:server": "cd server && npm run prod:ts",
     "prod:build:server": "tsc --pretty --allowJs --outDir ./build_server -p ./server/tsconfig.json",
     "-----HEROKU----": "---------------------------",
     "heroku-prebuild": "cd server && npm ci && ./node_modules/.bin/pm2 install pm2-intercom",
