--- a/server/package.json
+++ b/server/package.json
@@ -16,12 +16,15 @@
     "prod:build": "tsc --pretty",
     "prod:heroku:server": "pm2-runtime start ecosystem.config.js --env production",
     "prod:heroku:server_opt": "./node_modules/.bin/ts-node server.ts --optimize_for_size --max_old_space_size=460 --gc_interval=100",
-    "prod": " ../node_modules/.bin/ts-node server.ts ",
+    "prod:ts": " ../node_modules/.bin/ts-node server.ts ",
     "dev": "./node_modules/.bin/nodemon --config \"./nodemon.json\"",
     "test:unit": "cross-env NODE_ENV=test jest",
     "test:unit:watch": "cross-env NODE_ENV=test jest -o --watch --detectOpenHandles",
     "test:unit:coverage": "cross-env NODE_ENV=test --coverage --detectOpenHandles",
-    "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod 5001 test:coverage"
+    "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod 5001 test:coverage",
+    "prod": "node build_server/server/server.js",
+    "build_tsconfig": "./node_modules/.bin/tsc --project tsconfig.prod.json ",
+    "build": "./node_modules/.bin/tsc --pretty --emitDecoratorMetadata --esModuleInterop --experimentalDecorators  --forceConsistentCasingInFileNames --isolatedModules --listFiles --listEmittedFiles --noErrorTruncation --outDir ./build_server --removeComments --skipLibCheck --downlevelIteration server.ts"
   },
   "jest": {
     "testTimeout": 10000,
