--- a/server/package.json
+++ b/server/package.json
@@ -60,6 +60,7 @@
     "@types/jest": "^26.0.20",
     "@types/node-fetch": "^2.5.8",
     "@types/node-schedule": "^1.3.1",
+    "@types/redis": "^2.8.28",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "cross-env": "^7.0.3",
@@ -72,9 +73,11 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "@types/express-session": "^1.17.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
@@ -83,6 +86,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "pm2": "^4.5.4",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0",
