--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod 5001 test:coverage",
     "prod": "node build_server/server/server.js",
     "build_tsconfig": "./node_modules/.bin/tsc --project tsconfig.prod.json ",
-    "build": "./node_modules/.bin/tsc --pretty --emitDecoratorMetadata --esModuleInterop --experimentalDecorators  --forceConsistentCasingInFileNames --isolatedModules --listFiles --listEmittedFiles --noErrorTruncation --outDir ./build_server --removeComments --skipLibCheck --downlevelIteration server.ts"
+    "build": "./node_modules/.bin/tsc --pretty --emitDecoratorMetadata --esModuleInterop --experimentalDecorators  --forceConsistentCasingInFileNames --isolatedModules --listFiles --listEmittedFiles --noErrorTruncation --outDir ./build_server --removeComments --skipLibCheck --downlevelIteration server.ts",
+    "test": "snyk test"
   },
   "jest": {
     "testTimeout": 10000,
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/csurf": "^1.11.0",
     "@types/jest": "^26.0.20",
     "@types/node-fetch": "^2.5.8",
     "@types/node-schedule": "^1.3.1",
@@ -67,6 +69,7 @@
     "jest": "^26.6.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
+    "snyk": "^1.458.0",
     "start-server-and-test": "^1.12.0",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.0",
@@ -77,6 +80,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
