--- a/server/package.json
+++ b/server/package.json
@@ -78,6 +78,7 @@
   "dependencies": {
     "@types/express-session": "^1.17.3",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^5.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
