--- a/server/package.json
+++ b/server/package.json
@@ -59,10 +59,12 @@
   },
   "devDependencies": {
     "@types/csurf": "^1.11.0",
+    "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.20",
     "@types/node-fetch": "^2.5.8",
     "@types/node-schedule": "^1.3.1",
     "@types/redis": "^2.8.28",
+    "@types/request-ip": "0.0.35",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "cross-env": "^7.0.3",
@@ -76,7 +78,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "@types/express-session": "^1.17.3",
+    "async-ratelimiter": "^1.2.8",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^5.1.0",
     "cookie-parser": "^1.4.5",
@@ -93,6 +95,7 @@
     "pm2": "^4.5.4",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "^2.1.3",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0",
     "sequelize-typescript": "^2.0.0",
