--- a/server/package.json
+++ b/server/package.json
@@ -63,6 +63,7 @@
     "@types/jest": "^26.0.20",
     "@types/node-fetch": "^2.5.8",
     "@types/node-schedule": "^1.3.1",
+    "@types/ratelimiter": "^3.4.1",
     "@types/redis": "^2.8.28",
     "@types/request-ip": "0.0.35",
     "@types/supertest": "^2.0.10",
@@ -78,7 +79,6 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "async-ratelimiter": "^1.2.8",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^5.1.0",
     "cookie-parser": "^1.4.5",
@@ -93,6 +93,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "pm2": "^4.5.4",
+    "ratelimiter": "^3.4.1",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
