--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod 5001 test:coverage",
     "prod": "node build_server/server/server.js",
     "build_tsconfig": "./node_modules/.bin/tsc --project tsconfig.prod.json ",
-    "build": "./node_modules/.bin/tsc --pretty --emitDecoratorMetadata --esModuleInterop --experimentalDecorators  --forceConsistentCasingInFileNames --isolatedModules --listFiles --listEmittedFiles --noErrorTruncation --outDir ./build_server --removeComments --skipLibCheck --downlevelIteration server.ts"
+    "build": "./node_modules/.bin/tsc --pretty --emitDecoratorMetadata --esModuleInterop --experimentalDecorators  --forceConsistentCasingInFileNames --isolatedModules --listFiles --listEmittedFiles --noErrorTruncation --outDir ./build_server --removeComments --skipLibCheck --downlevelIteration server.ts",
+    "test": "snyk test"
   },
   "jest": {
     "testTimeout": 10000,
@@ -57,15 +58,21 @@
     ]
   },
   "devDependencies": {
+    "@types/csurf": "^1.11.0",
+    "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.20",
     "@types/node-fetch": "^2.5.8",
     "@types/node-schedule": "^1.3.1",
+    "@types/ratelimiter": "^3.4.1",
+    "@types/redis": "^2.8.28",
+    "@types/request-ip": "0.0.35",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "cross-env": "^7.0.3",
     "jest": "^26.6.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
+    "snyk": "^1.458.0",
     "start-server-and-test": "^1.12.0",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.0",
@@ -73,8 +80,11 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^5.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
+    "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
@@ -83,7 +93,10 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "pm2": "^4.5.4",
+    "ratelimiter": "^3.4.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "^2.1.3",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0",
     "sequelize-typescript": "^2.0.0",
