--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,9 +1,8 @@
 {
 	"compileOnSave": true,
 	"compilerOptions": {
-		"types": ["..src/@common/typings/*.d.ts","jest","node"],
 		/* Basic Options */
-		// Must be "es6" due to sequelize bug. Ref https://github.com/sequelize/sequelize/issues/7840
+		// Must be "es6" due to sequelize . Ref https://github.com/sequelize/sequelize/issues/7840
 		"target": "es6",                            /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
 		// Must be "commonjs" due to ts-node bug
 		"module": "commonjs",                       /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
@@ -51,12 +50,12 @@
 		/* Module Resolution Options */
 		"moduleResolution": "node",                 /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
 		"paths":{
-				"@commons":["src/@common"]
+			"@commons":["src/@common"]
 		},
 		/* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
 		// "rootDirs": [],                          /* List of root folders whose combined content represents the structure of the project at runtime. */
-		// "typeRoots": [],                         /* List of folders to include type definitions from. */
-		// "types": [],                             /* Type declaration files to be included in compilation. */
+		"typeRoots": ["./typings","./node_modules/@types","../src/@common/types"],                         /* List of folders to include type definitions from. */
+		"types": ["jest","node"],                   /* Type declaration files to be included in compilation. */
 		"allowSyntheticDefaultImports": true,       /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
 		"esModuleInterop": true,                    /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
 		// "preserveSymlinks": true,                /* Do not resolve the real path of symlinks. */
