--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "i18next-http-backend": "^1.1.0",
     "jquery": "^3.5.1",
     "localforage": "^1.9.0",
+    "rate-limiter-flexible": "^2.2.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-table-next": "^4.0.3",
