--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
-      # Add exec
-      - name: Build client
+      # Add exect
+      - name: Add exec to cli
         run: chmod +x cli/cli.sh
       # Build client
       - name: Build client
