--- a/server/package.json
+++ b/server/package.json
@@ -58,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/connect-redis": "0.0.16",
     "@types/csurf": "^1.11.0",
     "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.20",
@@ -72,11 +73,11 @@
     "jest": "^26.6.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
-    "snyk": "^1.458.0",
+    "snyk": "^1.460.0",
     "start-server-and-test": "^1.12.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.0",
-    "typescript": "^4.1.5"
+    "ts-jest": "^26.5.2",
+    "typescript": "^4.2.2"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -99,7 +100,7 @@
     "request-ip": "^2.1.3",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0",
-    "sequelize-typescript": "^2.0.0",
+    "sequelize-typescript": "^2.1.0",
     "ts-node": "^9.1.1",
     "umzug": "^3.0.0-beta.15",
     "uuid": "^8.3.2"
