Fix dev dependecies

--- a/package.json
+++ b/package.json
@@ -138,15 +138,15 @@
     "@types/body-parser": "^1.19.0",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.9",
-    "@types/dotenv": "^8.2.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/helmet": "^4.0.0",
     "@types/history": "^4.7.8",
+    "@types/i18next-browser-languagedetector": "^3.0.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.25",
+    "@types/node": "^14.14.31",
     "@types/react": "^16.14.2",
     "@types/react-bootstrap-date-picker": "^4.0.6",
     "@types/react-bootstrap-table-next": "^4.0.10",
