--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "heroku:log-prod": "heroku log --app calcetto2020prod",
     "heroku-prebuild": "cd server && npm ci && ./node_modules/.bin/pm2 install pm2-intercom",
     "heroku-postbuild": "npm run CRA:build ",
-    "heroku-cleanup": "rm -rf node_modules",
-    "start": "cd server && npm run prod:heroku:server",
+    "heroku-cleanup": "",
+    "start": "cli/cli.sh heroku --start --no-redirect",
     "-----CRA----": "---------------------------",
     "CRA:start": "react-scripts start",
     "CRA:build": "NODE_ENV=production react-scripts build ",
