heroku build process

--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "i18next-http-backend": "^1.1.1",
     "jquery": "^3.5.1",
     "localforage": "^1.9.0",
-    "rate-limiter-flexible": "^2.2.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-table-next": "^4.0.3",
@@ -80,9 +79,9 @@
     "-----HEROKU----": "---------------------------",
     "heroku:log-stage": "heroku log --app calcetto2020stage",
     "heroku:log-prod": "heroku log --app calcetto2020prod",
-    "heroku-prebuild": "cd server && npm ci && ./node_modules/.bin/pm2 install pm2-intercom",
-    "heroku-postbuild": "npm run CRA:build ",
-    "heroku-cleanup": "",
+    "heroku-prebuild": "cli/cli.sh heroku --prebuild --no-redirect",
+    "heroku-postbuild": "cli/cli.sh heroku --postbuild --no-redirect",
+    "heroku-cleanup": "cli/cli.sh heroku --cleanup --no-redirect",
     "start": "cli/cli.sh heroku --start --no-redirect",
     "-----CRA----": "---------------------------",
     "CRA:start": "react-scripts start",
