--- a/server/package.json
+++ b/server/package.json
@@ -73,10 +73,12 @@
     "jest": "^26.6.3",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0",
     "snyk": "^1.460.0",
     "start-server-and-test": "^1.12.0",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   },
   "dependencies": {
@@ -94,14 +96,12 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "pm2": "^4.5.5",
-    "ratelimiter": "^3.4.1",
+    "rate-limiter-flexible": "^2.2.1",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
     "sequelize": "^6.5.0",
-    "sequelize-cli": "^6.2.0",
     "sequelize-typescript": "^2.1.0",
-    "ts-node": "^9.1.1",
     "umzug": "^3.0.0-beta.15",
     "uuid": "^8.3.2"
   }
