--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "heroku:log-prod": "heroku log --app calcetto2020prod",
     "heroku-prebuild": "bash cli/cli.sh heroku --prebuild --no-redirect",
     "heroku-postbuild": "bash cli/cli.sh heroku --postbuild --no-redirect",
-    "heroku-cleanup": "bash cli/cli.sh heroku --cleanup --no-redirect",
+    "heroku-cleanup": "",
     "start": "bash cli/cli.sh heroku --start --no-redirect",
     "-----CRA----": "---------------------------",
     "CRA:start": "react-scripts start",
