--- a/package.json
+++ b/package.json
@@ -77,12 +77,12 @@
     "prod:server": "cd server && npm run prod:ts",
     "prod:build": "cd server && npm run build",
     "-----HEROKU----": "---------------------------",
-    "heroku:log-stage": "heroku log --app calcetto2020stage",
-    "heroku:log-prod": "heroku log --app calcetto2020prod",
-    "heroku-prebuild": "bash cli/cli.sh heroku --prebuild --no-redirect",
-    "heroku-postbuild": "bash cli/cli.sh heroku --postbuild --no-redirect",
+    "heroku:log-stage": "heroku logs --app calcetto2020stage",
+    "heroku:log-prod": "heroku logs --app calcetto2020prod",
+    "heroku-prebuild": "cli/cli.sh heroku --prebuild --no-redirect",
+    "heroku-postbuild": "cli/cli.sh heroku --postbuild --no-redirect",
     "heroku-cleanup": "",
-    "start": "bash cli/cli.sh heroku --start --no-redirect",
+    "start": "cli/cli.sh heroku --start --no-redirect",
     "-----CRA----": "---------------------------",
     "CRA:start": "react-scripts start",
     "CRA:build": "NODE_ENV=production react-scripts build ",
