--- a/package.json
+++ b/package.json
@@ -79,10 +79,10 @@
     "-----HEROKU----": "---------------------------",
     "heroku:log-stage": "heroku logs --app calcetto2020stage",
     "heroku:log-prod": "heroku logs --app calcetto2020prod",
-    "heroku-prebuild": "cli/cli.sh heroku --prebuild --no-redirect",
-    "heroku-postbuild": "cli/cli.sh heroku --postbuild --no-redirect",
+    "heroku-prebuild": "bash cli/cli.sh heroku --prebuild --no-redirect",
+    "heroku-postbuild": "bash cli/cli.sh heroku --postbuild --no-redirect",
     "heroku-cleanup": "",
-    "start": "cli/cli.sh heroku --start --no-redirect",
+    "start": "bash cli/cli.sh heroku --start --no-redirect",
     "-----CRA----": "---------------------------",
     "CRA:start": "react-scripts start",
     "CRA:build": "NODE_ENV=production react-scripts build ",
