--- a/package.json
+++ b/package.json
@@ -146,20 +146,23 @@
     "@types/i18next-browser-languagedetector": "^3.0.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.168",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.31",
     "@types/react": "^16.14.2",
     "@types/react-bootstrap-date-picker": "^4.0.6",
     "@types/react-bootstrap-table-next": "^4.0.10",
     "@types/react-datepicker": "^2.11.1",
-    "@types/react-dom": "^16.9.10",
+    "@types/react-dom": "^16.9.11",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^4.0.13",
-    "@types/react-test-renderer": "^17.0.0",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/redux-mock-store": "^1.0.2",
     "@types/swagger-ui-react": "^3.35.0",
     "@types/umzug": "^2.3.0",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.13.0",
     "babel-node": "0.0.1-security",
