strict transpile server

--- a/server/tsconfig.prod.json
+++ b/server/tsconfig.prod.json
@@ -2,9 +2,12 @@
 	"$schema": "https://json.schemastore.org/tsconfig",
 	"compilerOptions": {
 		"pretty": true,
-		"target":"ES6",
+		/* Basic Options */
+		// Must be "es6" due to sequelize . Ref https://github.com/sequelize/sequelize/issues/7840
+		"target": "es2020",
 		"module": "commonjs", //*
-		"lib": [ "esnext" ], //*
+		"lib": ["es2020"], //*
+		"strict": true,
 		"allowJs": true, //*
 		"checkJs": true, //*
 		"emitDecoratorMetadata": true,
@@ -12,8 +15,8 @@
 		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
 		"isolatedModules": true,
-		"listFiles": true,
-		"listEmittedFiles": true,
+		//"listFiles": true,
+		//"listEmittedFiles": true,
 		"noErrorTruncation": true,
 		"outDir": "./build_server",
 		"removeComments": true,
