--- a/server/package.json
+++ b/server/package.json
@@ -57,10 +57,17 @@
     ]
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/compression": "^1.7.0",
     "@types/connect-redis": "0.0.16",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.10",
     "@types/csurf": "^1.11.0",
     "@types/express-session": "^1.17.3",
+    "@types/history": "^4.7.8",
     "@types/jest": "^26.0.20",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/morgan": "^1.9.2",
     "@types/node-fetch": "^2.5.8",
     "@types/node-schedule": "^1.3.1",
     "@types/ratelimiter": "^3.4.1",
