--- a/server/package.json
+++ b/server/package.json
@@ -90,6 +90,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.0",
+    "compression": "^1.7.4",
     "connect-redis": "^5.1.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
