--- a/server/package.json
+++ b/server/package.json
@@ -89,6 +89,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "compression": "^1.7.4",
     "connect-redis": "^5.1.0",
