--- a/server/package.json
+++ b/server/package.json
@@ -75,6 +75,7 @@
     "@types/request-ip": "0.0.35",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.1.3",
     "cross-env": "^7.0.3",
     "jest": "^26.6.3",
     "node-fetch": "^2.6.1",
@@ -97,6 +98,7 @@
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
