--- a/package.json
+++ b/package.json
@@ -79,14 +79,10 @@
     "-----HEROKU----": "---------------------------",
     "heroku:log-stage": "heroku logs --app calcetto2020stage",
     "heroku:log-prod": "heroku logs --app calcetto2020prod",
-    "heroku-prebuild": "cd server && npm ci && ./node_modules/.bin/pm2 install pm2-intercom",
-    "heroku-postbuild": "npm run CRA:build ",
-    "heroku-cleanup": "rm -rf node_modules",
-    "start": "cd server && npm run prod:heroku:server",
-    "new_heroku-prebuild": "bash cli/cli.sh heroku --prebuild --no-redirect",
-    "new_heroku-postbuild": "bash cli/cli.sh heroku --postbuild --no-redirect",
-    "new_heroku-cleanup": "",
-    "new_start": "bash cli/cli.sh heroku --start --no-redirect",
+    "heroku-prebuild": "bash cli/cli.sh heroku --prebuild --no-redirect",
+    "heroku-postbuild": "bash cli/cli.sh heroku --postbuild --no-redirect",
+    "heroku-cleanup": "",
+    "start": "bash cli/cli.sh heroku --start --no-redirect",
     "-----CRA----": "---------------------------",
     "CRA:start": "react-scripts start",
     "CRA:build": "NODE_ENV=production react-scripts build ",
