--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.15.3",
   "description": "Table Soccer Manager",
   "engines": {
-    "node": "14.14.x",
+    "node": "14.x.x",
     "npm": "6.x"
   },
   "keywords": [
