--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "socket.io-client": "^3.1.2",
     "swagger-ui-react": "^3.44.0",
     "typeface-roboto": "^1.1.13",
     "typesafe-actions": "^5.1.0",
