--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
   //"files.autoSave": "onFocusChange",
   "editor.formatOnSave": true,
-  "editor.formatOnType": true,
+  // "editor.formatOnType": true,
   "editor.codeActionsOnSave": { "source.fixAll.eslint": true },
-  "eslint.debug": true,
-  "files.trimTrailingWhitespace": true,
+  // "eslint.debug": true,
+  // "files.trimTrailingWhitespace": true,
   //"eslint.workingDirectories": [{ "mode": "auto" }]
   "eslint.workingDirectories": ["./src", "./server"],
   "eslint.lintTask.enable": true,
