--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "socket.io-client": "^3.1.2",
+    "socket.io-client": "^4.0.0",
     "swagger-ui-react": "^3.44.0",
     "typeface-roboto": "^1.1.13",
     "typesafe-actions": "^5.1.0",
@@ -86,7 +86,7 @@
     "start": "bash cli/cli.sh heroku --start --no-redirect",
     "-----CRA----": "---------------------------",
     "CRA:start": "react-scripts start",
-    "CRA:build": "NODE_ENV=production react-scripts build ",
+    "CRA:build": "cross-env NODE_ENV=production react-scripts build ",
     "CRA:eject": "react-scripts eject",
     "CRA:test": "react-scripts test",
     "-----TEST----": "---------------------------",
