--- a/server/package.json
+++ b/server/package.json
@@ -77,6 +77,7 @@
     "@types/ratelimiter": "^3.4.1",
     "@types/redis": "^2.8.28",
     "@types/request-ip": "0.0.35",
+    "@types/socket.io-redis": "^1.0.27",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
@@ -95,6 +96,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bufferutil": "^4.0.3",
     "chalk": "^4.1.0",
     "compression": "^1.7.4",
     "connect-redis": "^5.1.0",
@@ -102,6 +104,7 @@
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
+    "eiows": "^3.4.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "helmet": "^4.4.1",
@@ -118,7 +121,10 @@
     "request-ip": "^2.1.3",
     "sequelize": "^6.5.0",
     "sequelize-typescript": "^2.1.0",
+    "socket.io": "^4.0.0",
+    "socket.io-redis": "^6.0.1",
     "umzug": "^3.0.0-beta.15",
+    "utf-8-validate": "^5.0.4",
     "uuid": "^8.3.2"
   }
 }
