--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,49 @@
 {
-    "$schema": "https://json.schemastore.org/tsconfig",
-    "compileOnSave": true,
-    "compilerOptions": {
-        "typeRoots": ["./src/@common/typings/*.d.ts"],
-        "target": "es5",
-        "module": "esnext",
-        "lib": ["dom","dom.iterable","esnext"],
-        "allowJs": true,
-        "jsx": "react",
-        "sourceMap": true,
-        "outDir": "./build",
-        "rootDir": ".",
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "strict": true,
-        "noImplicitAny": true,
-        "downlevelIteration": true,
-        "noFallthroughCasesInSwitch": true,
-        "plugins": [
-            {
-                "name": "typescript-tslint-plugin"
-            }
-        ],
-        "moduleResolution": "node",
-        "baseUrl": ".",
-        "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
-        "experimentalDecorators": true,
-        "noEmit": true
-    },
-    "include": ["src"],
-    "exclude": ["*.css","*.scss","node_modules","server"]
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "compileOnSave": true,
+  "compilerOptions": {
+    "typeRoots": [
+      "./src/@common/typings/*.d.ts"
+    ],
+    "target": "es5",
+    "module": "esnext",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "jsx": "react-jsx",
+    "sourceMap": true,
+    "outDir": "./build",
+    "rootDir": ".",
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "downlevelIteration": true,
+    "noFallthroughCasesInSwitch": true,
+    "plugins": [
+      {
+        "name": "typescript-tslint-plugin"
+      }
+    ],
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "noEmit": true
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "*.css",
+    "*.scss",
+    "node_modules",
+    "server"
+  ]
 }
