--- a/server/package.json
+++ b/server/package.json
@@ -92,6 +92,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
     "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.2"
   },
   "dependencies": {
