--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "test:unit:coverage": "cross-env NODE_ENV=test --coverage --detectOpenHandles",
     "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod 5001 test:coverage",
     "prod": "node build_server/server/server.js",
-    "build": "./node_modules/.bin/tsc --project tsconfig.prod.json",
+    "build2": "./node_modules/.bin/tsc --project tsconfig.prod.json",
+    "build": "./node_modules/.bin/tsc --project tsconfig.json",
     "test": "snyk test"
   },
   "jest": {
@@ -91,6 +92,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.2",
     "ts-node": "^9.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.2"
   },
   "dependencies": {
