--- a/server/package.json
+++ b/server/package.json
@@ -17,18 +17,14 @@
     "test": "test"
   },
   "scripts": {
-    "prod:build": "tsc --pretty",
-    "prod:heroku:server": "pm2-runtime start ecosystem.config.js --env production",
-    "prod:heroku:server_opt": "./node_modules/.bin/ts-node server.ts --optimize_for_size --max_old_space_size=460 --gc_interval=100",
-    "prod:ts": " ../node_modules/.bin/ts-node server.ts ",
     "dev": "./node_modules/.bin/nodemon --config \"./nodemon.json\"",
     "test:unit": "cross-env NODE_ENV=test jest",
     "test:unit:watch": "cross-env NODE_ENV=test jest -o --watch --detectOpenHandles",
     "test:unit:coverage": "cross-env NODE_ENV=test --coverage --detectOpenHandles",
     "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod 5001 test:coverage",
-    "prod": "node build_server/server/server.js",
-    "build2": "./node_modules/.bin/tsc --project tsconfig.prod.json",
-    "build": "./node_modules/.bin/tsc --project tsconfig.json",
+    "prod": "node build/server/server.js",
+    "build2": "./node_modules/.bin/ttsc --project tsconfig.prod.json",
+    "build": "./node_modules/.bin/ttsc --project tsconfig.json",
     "test": "snyk test"
   },
   "jest": {
@@ -93,7 +89,9 @@
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.2.3",
+    "typescript-transform-paths": "^2.2.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
