--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "swagger-ui-react": "^3.45.0",
     "typeface-roboto": "^1.1.13",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "web-push-notifications": "^3.18.2"
   },
   "scripts": {
     "-----DEVELOPMENT----": "---------------------------",
