--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,7 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "gcm_sender_id": "YOUR_GOOGLE_PROJECT_ID",
+  "gcm_user_visible_only": true
 }
